# apple-notes-mcp

./: .gitignore  README.md  pyproject.toml
src/apple_notes_mcp/: __init__.py  server.py
