[project]
name = "apple-notes-mcp"
version = "0.1.0"
description = "MCP server for Apple Notes with read/write capabilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
apple-notes-mcp = "apple_notes_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apple_notes_mcp"]
